[sensor][Linux] Fix fusion sensors creation

This patch fixes fusion sensor creation failure in PlatformSensorProviderLinux.
The problem was that PlatformSensorProviderLinux::CreateSensorInternal() early
returned in case device nodes were not indexed ignoring creation of fusion senor
types.

The patch also improves the PlatformSensorFusion class interface with introducing
of a factory method which enforces the clients to use async callback for
initialization PlatformSensorFusion instances.

Bug: 758498
Change-Id: Id3e773cc770397a2ceb133a7fd88af9106e77bd3